# AgentFactor

./: .gitignore  Agent.md  AgentPrompt.md  CLAUDE.md  DX-ENHANCEMENTS.md  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
frontend_fantastic/: README.md  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
frontend_fantastic/apps/core/: .env.development  .env.production  .env.test  vite.config.ts
frontend_fantastic/apps/core/src/: App.vue  i18n.ts  settings.ts
frontend_fantastic/e2e/: helpers.ts  smoke.spec.ts  work-graph.spec.ts
scripts/: dashboard_smoke_test.mjs  dashboard_smoke_test.py  launch_agents.sh  teardown_agents.sh
src/agentfactor/: constants.py
src/agentfactor/agent_store/: conductor.md  deepseek_tester.md  developer.md  document_writer.md  overseer.md  reviewer.md  tester.md
src/agentfactor/api/: main.py
src/agentfactor/cli/: main.py
src/agentfactor/clients/: database.py  tmux.py
src/agentfactor/mcp_server/: _http.py  main.py  server.py
src/agentfactor/models/: approval.py  context.py  enums.py  inbox.py  review.py  session.py  terminal.py  topology.py  work.py
src/agentfactor/providers/: base.py  claude_code.py  codex.py  deepseek_provider.py  manager.py  q_cli.py
src/agentfactor/services/: analysis_service.py  approval_service.py  blueprint_service.py  capability_registry.py  cleanup_service.py  compaction_service.py  context_loss_detector.py  context_pack_service.py  embedding_service.py  event_service.py  flow_service.py  inbox_service.py  llm_review_service.py  prompt_service.py  proof_collector.py  session_service.py  stream_processor.py  terminal_service.py  topology_engine.py  work_service.py
src/agentfactor/utils/: agent_profiles.py  logging.py  pathing.py  terminal.py  wsl.py
tests/: conftest.py  test_api.py  test_cli_launch.py  test_cli_personas.py  test_llm_review_service.py  test_mcp_tools.py  test_provider_deepseek.py  test_services.py
(+35 files in other folders)
