[project]
name = "agentfactor"
version = "0.2.2"
description = "CLI AgentFactor orchestrator and tooling."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
authors = [
  { name = "AgentFactor Authors" }
]
keywords = ["agents", "cli", "orchestration", "tmux"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dependencies = [
  "click>=8.1",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "sqlmodel>=0.0.16",
  "libtmux>=0.25",
  "watchdog>=4.0",
  "httpx>=0.27",
  "python-frontmatter>=1.1",
  "croniter>=1.4",
  "fastmcp>=2.0"
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5.0",
  "black>=24.4",
  "types-requests>=2.32"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E203"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_any_unimported = true
show_error_codes = true
plugins = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["agentfactor"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"agentfactor" = [
  "agent_store/*.md",
]

[project.scripts]
agentfactor = "agentfactor.cli.main:cli"
af = "agentfactor.cli.main:cli"
acd = "agentfactor.cli.main:cli"
agentfactor-mcp = "agentfactor.mcp_server.main:run"
acd-mcp = "agentfactor.mcp_server.main:run"
